<resources>
    <string name="app_name">TradeMeTask</string>
    <string name="title_listing_detail">Listing Detail</string>
    <string name="check_internet">Check your Internet connection</string>
    <string name="title">Title</string>
    <string name="start_price">Start price</string>
    <string name="buy_now_price">Buy now price</string>
    <string name="started_at">Started at</string>
    <string name="end_at">End at</string>
</resources>
